fixes youtube aspect ratio on mobile on bingo page

--- a/src/styles/labs/bingo.sass
+++ b/src/styles/labs/bingo.sass
@@ -3,7 +3,9 @@
     h4
     li
       cursor: pointer
+      user-select: none
       padding-bottom: 2em
+      -webkit-tap-highlight-color: transparent
   &.only-music
     max-width: 800px
     margin: auto
